--- a/portfolio.html
+++ b/portfolio.html
@@ -44,13 +44,19 @@
                     <li><button type="button" class="dutton">Маркетинг</button></li>
                 </ul>
                 <ul class="project">
-                    <li>
+                    <li class="project-combined">
                         <a href="#"><img src="./images/project-1.jpg" alt="Первый проэкт">
                             <div class="project-united">
                                 <h2 class="title">Технокряк</h2>
                                 <p class="text">Веб-сайт</p>
                             </div>
-
+                            <div class="app-text">
+                                <p class="project-app-text"> Ресурс предлагает комплексные предложения с разным уровнем
+                                    функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице
+                                </p>
+                            </div>
                         </a>
                     </li>
                     <li>
