--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,19 @@
                 </ul>
             </nav>
             <ul class="contact-nav">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li>
+                    <a href="mailto:info@devstudio.com">
+
+                        <svg class="icon-header" width="16px" height="12px">
+                            <use href="./images/symbol-defs.svg#icon-email"></use>
+                        </svg>info@devstudio.com
+                    </a>
+                </li>
+                <li><a href="tel:+380961111111">
+                        <svg class="icon-header" width="10px" height="16px">
+                            <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -44,87 +55,147 @@
                     <li><button type="button" class="dutton">Маркетинг</button></li>
                 </ul>
                 <ul class="project">
-                    <li class="project-combined">
-                        <a href="#"><img src="./images/project-1.jpg" alt="Первый проэкт">
-                            <div class="project-united">
-                                <h2 class="title">Технокряк</h2>
-                                <p class="text">Веб-сайт</p>
-                            </div>
-                            <div class="app-text">
-                                <p class="project-app-text"> Ресурс предлагает комплексные предложения с разным уровнем
+                    <li class="project-icon">
+                        <a href="#">
+                            <div class="project-combined">
+                                <img src="./images/project-1.jpg" alt="Первый проэкт">
+                                <p class="project-app-text project-app"> Ресурс предлагает комплексные предложения с
+                                    разным
+                                    уровнем
                                     функционала и сервисов.
                                     Все это позволит посетителю получить
                                     исчерпывающие сведения о компании или частном лице
                                 </p>
                             </div>
+                            <div class="project-united">
+                                <h2 class="title">Технокряк</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
-                            <img src="./images/project-2.jpg" alt="Второй проэкт">
+                    <li class="project-icon">
+                        <a href="#">
+                            <div class="project-combined">
+                                <img src="./images/project-2.jpg" alt="Второй проэкт">
+                                <p class="project-app-text project-app"> Ресурс предлагает комплексные предложения с
+                                    разным уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице
+                                </p>
+                            </div>
                             <div class="project-united">
                                 <h2 class="title">Постер New Orlean vs Golden Star</h2>
                                 <p class="text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="project-icon">
                         <a href="">
-                            <img src="./images/project-3.jpg" alt="Трейтий проэкт">
+                            <div class="project-combined">
+                                <img src="./images/project-3.jpg" alt="Трейтий проэкт">
+                                <p class="project-app-text project-app"> Ресурс предлагает комплексные предложения с
+                                    разным уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице
+                                </p>
+                            </div>
+
                             <div class="project-united">
                                 <h2 class="title">Ресторан Seafood</h2>
                                 <p class="text">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="project-icon">
                         <a href="">
-                            <img src="./images/project-4.jpg" alt="Четвертый проэкт">
+                            <div class="project-combined">
+                                <img src="./images/project-4.jpg" alt="Четвертый проэкт">
+                                <p class="project-app-text project-app"> Ресурс предлагает комплексные предложения с
+                                    разным уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице
+                                </p>
+                            </div>
                             <div class="project-united">
                                 <h2 class="title">Проект Prime</h2>
                                 <p class="text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="project-icon">
                         <a href="">
-                            <img src="./images/project-5.jpg" alt="Пятый проэкт">
+                            <div class="project-combined">
+                                <img src="./images/project-5.jpg" alt="Пятый проэкт">
+                                <p class="project-app-text project-app"> Ресурс предлагает комплексные предложения с
+                                    разным уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице
+                                </p>
+                            </div>
                             <div class="project-united">
                                 <h2 class="title">Проект Boxes</h2>
                                 <p class="text">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="project-icon">
                         <a href="">
-                            <img src="./images/project-6.jpg" alt="Шестой проэкт">
+                            <div class="project-combined">
+                                <img src="./images/project-6.jpg" alt="Шестой проэкт">
+                                <p class="project-app-text project-app"> Ресурс предлагает комплексные предложения с
+                                    разным уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице
+                                </p>
+                            </div>
                             <div class="project-united">
                                 <h2 class="title">Inspiration has no Borders</h2>
                                 <p class="text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="project-icon">
                         <a href="">
-                            <img src="./images/project-7.jpg" alt="Седьмой проэкт">
+                            <div class="project-combined">
+                                <img src="./images/project-7.jpg" alt="Седьмой проэкт">
+                                <p class="project-app-text project-app"> Ресурс предлагает комплексные предложения с
+                                    разным уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице
+                                </p>
+                            </div>
                             <div class="project-united">
                                 <h2 class="title">Издание Limited Edition</h2>
                                 <p class="text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="project-icon">
                         <a href="">
-                            <img src="./images/project-8.jpg" alt="восьмой проэкт">
+                            <div class="project-combined">
+                                <img src="./images/project-8.jpg" alt="восьмой проэкт">
+                                <p class="project-app-text project-app"> Ресурс предлагает комплексные предложения с
+                                    разным уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице
+                                </p>
+                            </div>
                             <div class="project-united">
                                 <h2 class="title">Проект LAB</h2>
                                 <p class="text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="project-icon">
                         <a href="">
-                            <img src="./images/project-9.jpg" alt="восьмой проэкт">
+                            <div class="project-combined">
+                                <img src="./images/project-9.jpg" alt="восьмой проэкт">
+                                <p class="project-app-text project-app"> Ресурс предлагает комплексные предложения с
+                                    разным уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице
+                                </p>
+                            </div>
                             <div class="project-united">
                                 <h2 class="title">Growing Business</h2>
                                 <p class="text">Приложение</p>
@@ -138,15 +209,54 @@
 
     <footer class="page-footer">
         <div class="container">
-            <a href="./index.html" class="logo-footer">Web<span class="accent-footer">Studio</span></a>
-            <address>
-                <ul class="nav-footer">
-                    <li><a href="https://goo.gl/maps/x7mhKrJAUDWi56Dh6" target="_blank" rel="noopener noreferrer"
-                            class="maps">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="phone-footer">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="phone-footer">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
+            <div class="footer-container">
+                <div class="footer-nav">
+                    <a href="./index.html" class="logo-footer">Web<span class="accent-footer">Studio</span></a>
+                    <address>
+                        <ul class="nav-footer">
+                            <li><a href="https://goo.gl/maps/x7mhKrJAUDWi56Dh6" target="_blank"
+                                    rel="noopener noreferrer" class="maps">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li><a href="mailto:info@devstudio.com" class="phone-footer">info@devstudio.com</a></li>
+                            <li><a href="tel:+380961111111" class="phone-footer">+38 096 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer-social">
+                    <div class="social">
+                        <p class="title-footer">присоединяйтесь</p>
+                        <ul class="social-footer">
+                            <li class="">
+                                <a href="" class="icon-footer">
+                                    <svg width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="">
+                                <a href="" class="icon-footer">
+                                    <svg width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-tviter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="">
+                                <a href="" class="icon-footer">
+                                    <svg width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-fb"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="">
+                                <a href="" class="icon-footer">
+                                    <svg width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-in"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
