--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 
         <section class="hero">
             <h1 class="hero-title">Эффективные решения <br /> для вашего бизнеса</h1>
-            <button type="button" class="button">Заказать услугу</button>
+            <button type="button" class="button" data-modal-open>Заказать услугу</button>
         </section>
+
+
 
 
         <section class="section-dignity">
@@ -82,9 +84,18 @@
             <div class="container">
                 <h2 class="title">Чем мы занимаемся</h2>
                 <ul>
-                    <li><img src="./images/box-1.jpg" alt="box-1" width="370"></li>
-                    <li><img src="./images/box-2.jpg" alt="box-2" width="370"></li>
-                    <li><img src="./images/box-3.jpg" alt="box-3" width="370"></li>
+                    <li class="images-title">
+                        <img src="./images/box-1.jpg" alt="box-1" width="370">
+                        <p class="images-text images-cont">Десктопные приложения</p>
+                    </li>
+                    <li class="images-title">
+                        <img src="./images/box-2.jpg" alt="box-2" width="370">
+                        <p class="images-text images-cont">Мобильные приложения</p>
+                    </li>
+                    <li class="images-title">
+                        <img src="./images/box-3.jpg" alt="box-3" width="370">
+                        <p class="images-text images-cont">Дизайнерские решения</p>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -352,6 +363,16 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="btn-close" data-modal-close>
+                <svg class="icon-modal" width="18" height="18">
+                    <use href="./images/symbol-defs.svg#icon-close-black"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
