--- a/portfolio.html
+++ b/portfolio.html
@@ -216,8 +216,10 @@
                         <ul class="nav-footer">
                             <li><a href="https://goo.gl/maps/x7mhKrJAUDWi56Dh6" target="_blank"
                                     rel="noopener noreferrer" class="maps">г. Киев, пр-т Леси Украинки, 26</a></li>
-                            <li><a href="mailto:info@devstudio.com" class="phone-footer">info@devstudio.com</a></li>
-                            <li><a href="tel:+380961111111" class="phone-footer">+38 096 111 11 11</a></li>
+                            <li class="indent-footer"><a href="mailto:info@devstudio.com"
+                                    class="phone-footer">info@devstudio.com</a></li>
+                            <li class="indent-footer"><a href="tel:+380961111111" class="phone-footer">+38 096 111 11
+                                    11</a></li>
                         </ul>
                     </address>
                 </div>
