--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 
 
 
-
         <section class="section-dignity">
             <div class="container">
                 <h2 class="visually-hidden">Перечень достоинств</h2>
@@ -372,6 +371,43 @@
                     <use href="./images/symbol-defs.svg#icon-close-black"></use>
                 </svg>
             </button>
+
+            <form action="">
+                <h2>Оставьте свои данные, мы вам перезвоним</h2>
+                <div class="form-united">
+                    <label for="name" class="form-ucer">Имя</label>
+                    <input type="text" class="form-input" name="user-name" id="name"
+                        placeholder="Иванов Иван Иваванович">
+                    <svg class="form-icon" width="18" height="18">
+                        <use href="./images/symbol-defs.svg#icon-name"></use>
+                    </svg>
+                </div>
+
+                <div class="form-united">
+                    <label for="tel" class="form-ucer">Телефон</label>
+                    <input type="tel" class="form-input" name="mail" id="tel" placeholder="+380 (***) 111 11 11">
+                    <svg class="form-icon" width="18" height="18">
+                        <use href="./images/symbol-defs.svg#icon-tel"></use>
+                    </svg>
+                </div>
+
+                <div class="form-united">
+                    <label for="mail" class="form-ucer">Почта</label>
+                    <input type="email" class="form-input" name="mail" id="mail" placeholder="mail@gmai.com">
+                    <svg class="form-icon" width="18" height="18">
+                        <use href="./images/symbol-defs.svg#icon-mail"></use>
+                    </svg>
+                </div>
+
+                <textarea name="" id="" cols="30" rows="10" placeholder="Введите текст"></textarea>
+
+                <input type="checkbox" id="agreement">
+                <label for="agreement">Соглашаюсь с рассылкой и принимаю <span>Условия договора</span> </label>
+
+
+                <button type="submit">Отправить</button>
+            </form>
+
         </div>
     </div>
     <script src="./js/modal.js"></script>
