--- a/portfolio.html
+++ b/portfolio.html
@@ -258,6 +258,21 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="footer-telegram">
+                    <form name="subscribe">
+                        <p class="title-footer">Подпишитесь на рассылку</p>
+                        <div class="footer-form">
+                            <input class="footer-input" type="email" name="email" placeholder="E-mail">
+                            <button class="footer-btn" type="submit">
+                                Подписаться
+                                <svg class="icon-send" width="24" height="24">
+                                    <use href="./images/symbol-defs.svg#icon-telegram"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </footer>
