--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                     <label for="name" class="form-ucer">Имя</label>
                     <input type="text" class="form-input" name="user-name" id="name"
                         placeholder="Иванов Иван Иваванович">
-                    <svg class="form-icon" width="18" height="18">
+                    <svg class="form-icon" width="12" height="12">
                         <use href="./images/symbol-defs.svg#icon-name"></use>
                     </svg>
                 </div>
@@ -401,7 +401,7 @@
                 <div class="form-united">
                     <label for="tel" class="form-ucer">Телефон</label>
                     <input type="tel" class="form-input" name="mail" id="tel" placeholder="+380 (***) 111 11 11">
-                    <svg class="form-icon" width="18" height="18">
+                    <svg class="form-icon" width="13" height="13">
                         <use href="./images/symbol-defs.svg#icon-tel"></use>
                     </svg>
                 </div>
@@ -409,7 +409,7 @@
                 <div class="form-united">
                     <label for="mail" class="form-ucer">Почта</label>
                     <input type="email" class="form-input" name="mail" id="mail" placeholder="mail@gmai.com">
-                    <svg class="form-icon" width="18" height="18">
+                    <svg class="form-icon" width="15" height="12">
                         <use href="./images/symbol-defs.svg#icon-mail"></use>
                     </svg>
                 </div>
@@ -419,16 +419,28 @@
                     <textarea name="name" id="" cols="30" rows="10" placeholder="Введите текст"></textarea>
                 </div>
 
-                <div class="agreement">
-                    <input class="checkbox-input" type="checkbox" id="agreement">
+                <label class="form-united agreement">
+                    <input class="checkbox-input" type="checkbox" name="agreement" id="agreement">
+                    <span class="checkbox"></span>
+                    <span class="form-agreement">Соглашаюсь с рассылкой и принимаю
+                        <a class="form-link" href="">Условия договора</a>
+                    </span>
+                </label>
 
-                    <svg class="checkbox" width="16" height="15">
-                        <use href="./images/symbol-defs.svg#icon-icon-check"></use>
-                    </svg>
 
-                    <label for="agreement-text">Соглашаюсь с рассылкой и принимаю <span class="form-link">Условия
-                            договора</span> </label>
+                <!--<div class="agreement">
+                    <input class="checkbox" type="checkbox" id="agreement">
+
+                    <label>
+                        <span class="checkbox-input"></span>
+                        <span class="greement-text">Соглашаюсь с рассылкой и принимаю</span>
+                         <span class="form-link">Условия
+                            договора</span>
+                    </label>
                 </div>
+                -->
+
+
 
                 <button class="modal-btn" type="submit">Отправить</button>
             </form>
